# ml-tech-assessment

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: configurations.py  views.py
app/adapters/: db.py  openai.py
app/domain/: configurations.py  dtos.py
app/ports/: __init__.py  llm.py  manager.py  repository.py
app/services/: controller.py
deployment/: main.tf  provider.tf  variables.tf
tests/: test_configurations_and_prompts.py
tests/adapters/: test_db.py  test_openai.py
tests/domain/: test_dtos.py
tests/ports/: test_ports_and_repository.py
tests/services/: test_controller.py
