[project]
name = "ml-tech-assessment"
version = "0.1.0"
description = ""
authors = [{ name = "jhonvalderrama", email = "jhonvalderrama@aceup.com" }]
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "openai>=1.76.2,<2",
    "pydantic-settings>=2.9.1,<3",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"
collect_imported_tests = false
log_cli_level = "INFO"
log_level = "INFO"
pythonpath = "app"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pre-commit>=4.4.0",
    "pytest>=8.3.5,<9",
    "pytest-asyncio>=0.24.0,<1",
    "pytest-cov>=4.1.0,<5",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pylint>=4.0.2",
]

[tool.black]
line-length = 140
exclude = '''
^/(
 (
     \.eggs         # exclude a few common directories in the
   | \.git          # root of the project
   | \.hg
   | \.mypy_cache
   | \.tox
   | venv
   | .venv
   | env
   | .env
   | _build
   | buck-out
   | build
   | dist
   | migrations
 )/
)
'''

[tool.pylint]
max-line-length = 140
disable = [
    "C0116", # Missing module docstring
    "C0114",
    "C0301",
    "C0115",
]
ignore-paths = [
    "tests/.*", # Excludes any 'tests' directory
]

[tool.mypy]
exclude = ["tests/"]

